fix map button problem on tablet view

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -81,6 +81,11 @@ section {
 }
 
 @media (min-width: 768px) {
+    article {
+        &.weatherArticle {
+            display: block;
+        }
+    }
     section {
         &.shortWeather {
             height: 35vh;
